feat: add request validations